================================================
|               Version 0.0.3                  |
================================================
 - Particle System;
 - Little Bugs fixes;
 
================================================
|               Version 0.0.2                  |
================================================
 - Support for Cal3D format for character models;
 - Support for sound and music (SDL_Mixer);
 - Some animations added;
 - Gui is now avaible on graphical engine;
 - Colision detection more permissive;
 - Makefile to compile on window$ (Dev-C++);
 - MiniMap implementated;
 - Constant character & camera velocity;
 - Initial menu;
 - Loading screen;
 - Some new objects and characters added;
 - Map to map navigation;
 - Added Options Screen;
 - Objects orientation possible;
 - Better Floor & Walls Representation;
 - Variable terrain height;
 - Object pass throught added;
 - Interactive Doors Added;
 - Objects Selection;
 - Optimized intern map representation;
 - Colored mouse cursors;
 - New things on maps;
 - Wrote player's book document;
 - Skill Window;
 - Full English & Portuguese support;
 - Partial French & Spanish support;
 - Some bugs fixed.

================================================
|               Version 0.0.1                  |
================================================
 - First Release of DccNiTghtmare;
 - View Frustum Culling;
 - Static LOD;
 - First Implementation of Colision Detection;
 - First Step to animation (body division);
 - The Character can "Walk" (erh, fly??);
 - The Camera can move. 