@@ -1,0 +1,21 @@
+MAXLIVE 100
+MAXPARTICLES 300
+CENTERX 50
+CENTERY 0
+CENTERZ 120
+GRAVITY 12
+INITR 0.18
+INITG 0.18
+INITB 0
+FINALR 0.27
+FINALG 0.04
+FINALB 0.04
+ALPHA 1
+DMULTCENTER 14 1 1
+DSUMCENTER -1 0 0
+DMULTPOS 30 0 10
+DSUMPOS 0 0 0
+DMULTCOLOR 1 1 1
+DSUMCOLOR 0 0 0
+DMULTVEL 2 0 2
+DSUMVEL -1 0 -1
