@@ -1,5 +1,5 @@
 MAXLIVE 100
-MAXPARTICLES 200
+MAXPARTICLES 400
 CENTERX 0.0
 CENTERY 0.0
 CENTERZ 0.0
@@ -18,4 +18,4 @@ DSUMPOS -0.10 -0.10 -0.10
 DMULTCOLOR 1.0 1.0 1.0
 DSUMCOLOR 0.0 0.0 0.0
 DMULTVEL 0.5 0.0 0.5
-DSUMVEL -0.25 0.0 -0.25
+DSUMVEL -0.25 0.3 -0.25
